XCOMMONS-3330: Job groups with several threads may not return a current job
* Increase since-versions to 17.5.0RC1.
* Put back more locking to avoid race conditions.
* Add some more comments what the code does.